--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --check ."
   },
   "dependencies": {
+    "ajv": "^8.17.1",
     "vue": "^3.5.22"
   },
   "devDependencies": {
