--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .js,.ts,.vue",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json",
-    "format": "prettier --check ."
+    "format": "prettier --check .",
+    "test": "vitest"
   },
   "dependencies": {
     "ajv": "^8.17.1",
@@ -23,11 +24,13 @@
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.22",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-vue": "^9.33.0",
     "globals": "^16.5.0",
+    "jsdom": "^27.2.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.18",
@@ -35,6 +38,7 @@
     "typescript-eslint": "^8.47.0",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3",
+    "vitest": "^4.0.13",
     "vue-tsc": "^3.1.4"
   }
 }
