--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint . --ext .js,.ts,.vue",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json",
     "format": "prettier --check .",
+    "prepare": "husky install",
     "test": "vitest"
   },
   "dependencies": {
@@ -31,6 +32,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-vue": "^9.33.0",
     "globals": "^16.5.0",
+    "husky": "^9.1.7",
     "jsdom": "^27.2.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
