--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "ajv": "^8.17.1",
+    "lz-string": "^1.5.0",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
