--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "lint": "eslint . --ext .js,.ts,.vue",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json",
     "format": "prettier --check .",
-    "prepare": "husky install",
     "test": "vitest"
   },
   "dependencies": {
@@ -23,7 +22,6 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.53.3",
     "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
@@ -35,10 +33,10 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-vue": "^9.33.0",
     "globals": "^16.5.0",
-    "husky": "^9.1.7",
     "jsdom": "^27.2.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "rollup": "^4.53.3",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.47.0",
